--- a/src/components/custom.css
+++ b/src/components/custom.css
@@ -1,3 +1,8 @@
+body, html, *{
+  font-family: 'Hind', sans-serif;
+  font-size: large;
+}
+
 /* Custom styles for Login.js */
 .login-container {
     max-width: 400px;
@@ -10,6 +15,7 @@
   
   .login-title {
     text-align: center;
+    font-weight: bold;
     font-size: 24px;
     color: #007bff;
     margin-bottom: 20px;
@@ -22,38 +28,38 @@
     padding: 20px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    background-color: #fff;
   }
   
   .register-title {
     text-align: center;
     font-size: 24px;
+    font-weight: bold;
     color: #007bff;
     margin-bottom: 20px;
   }
   
-  /* Custom styles for BMI.js */
-  .bmi-container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ddd;
+  /* Button */
+  .button{
+    width: 100%;
+    margin: auto;
+    text-align: center;
+  }
+  
+  /* Primary button styles */
+  .btn-primary {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    /* width: 100%; */
+    padding: 10px;
+    font-weight: bold;
     border-radius: 5px;
-    background-color: #fff;
+    transition: background-color 0.3s;
   }
   
-  .bmi-title {
-    text-align: center;
-    font-size: 24px;
-    color: #007bff;
-    margin-bottom: 20px;
-  }
-
-  .about-title {
-    text-align: center;
-    font-size: 24px;
-    color: #007bff;
-    margin-bottom: 20px;
+  .btn-primary:hover {
+    background-color: #0056b3;
   }
   
   /* Custom styles for Head.js */
@@ -72,6 +78,25 @@
     font-size: 18px;
     color: #6c757d;
     margin-top: 20px;
+  }
+  
+  /* Form */
+
+  .form-group {
+    margin-bottom: 15px;
+  }
+  
+  .form-group label {
+    margin-bottom: 5px;
+    font-weight: bold;
+    margin: 5px auto;
+  }
+  
+  .form-control {
+    margin: auto;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
   }
   
   /* Custom styles for AccordionItem.js */
